# esp32-projects

./: .gitignore  README.md
bird_call_id/: make_dataset.ipynb  server.py  train_tf.ipynb  train_torch.ipynb
bird_call_id/bird_call_esp32/: bird_call_esp32.ino  model.h
bird_call_id/esp32_code/: CMakeLists.txt
bird_call_id/esp32_code/src/: main.cpp
bird_call_identifier_training/: arbiter.py  constants.py  data.py  expert.py  main.py  train.py
birdclef-2023/: train.ipynb
